# nysvpb

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml
client/src/: lib.rs  main.rs
core/: Cargo.toml
core/src/: crypto.rs  lib.rs  tun.rs  tunnel.rs  vpn.rs
daemon/: Cargo.toml
daemon/src/: main.rs
gui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
gui/src/: App.tsx  index.css  tauri-commands.ts  types.ts
gui/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: lib.rs  main.rs
gui/src/components/: StatusBadge.tsx
gui/src/screens/: MainScreen.tsx  ServerListScreen.tsx  SettingsScreen.tsx
macos/: Info.plist  com.nysvpb.daemon.plist
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
