[package]
name = "nysvpn-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
chacha20poly1305 = "0.10"
tun = { version = "0.6", features = ["async"] }
tokio-util = "0.7"
rand_core = "0.6"
shared = { path = "../shared" }
