[package]
name = "nysvpb-gui"
version = "0.1.0"
description = "NySVPN macOS desktop application"
authors = ["NySVPN Team"]
edition = "2021"

# Tauri build script is required.
build = "build.rs"

[lib]
name = "nysvpb_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "nysvpb-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"

# NySVPN crates (relative path from gui/src-tauri)
shared = { path = "../../shared" }
client = { path = "../../client" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true


